ingress-tutorial/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mynamespace
  labels:
    environment: prod
    app: v1
