ingress-tutorial/v1-namespace.yml
kind: Namespace

apiVersion: v1

metadata:
  name: v1ns
  labels:
    environment: prod
    app: v1
