ingress-tutorial/v2-namespace.yml
kind: Namespace

apiVersion: v1

metadata:
  name: v2ns
  labels:
    environment: prod
    app: v2
