ingress-tutorial/v1-deployment.yml
kind: Deployment

apiVersion: apps/v1

metadata:
  name: v1deployment
  labels:
    environment: prod
    app: v1
  annotations:
    kubernetes.io/autoupdate-spec: "work for v1 releases"

spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      environment: prod
      app: v1
  template:
    metadata:
      name: v1pod
      labels:
        environment: prod
        app: v1
    spec:
      nodeSelector:
        environment: prod
        app: v1
      containers:
        - name: v1container
          image: vedfordocker/myapp:v1         # need to change as per avni dockerhub image
          ports:
            - containerPort: 8088
