ingress-tutorial/v1-proxyservice.yml
apiVersion: v1
kind: Service
metadata:
  name: v1-proxyservice
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: v1-service.v1ns.svc.cluster.local
