ingress-tutorial/v1-service.yml
apiVersion: v1

kind: Service

metadata:
  name: v1-service
  labels:
    app: superset
    environment: prod

spec:
  type: ClusterIP
  selector:
    app: v1
    environment: prod
  ports:
    - protocol: TCP
      port: 8088        # Service port
      targetPort: 8088  # Target port on the Superset container
