ingress-tutorial/v2-service.yml
apiVersion: v1

kind: Service

metadata:
  name: v2-service
  namespace: v2ns
  labels:
    app: superset
    environment: prod

spec:
  type: ClusterIP
  selector:
    app: v2
    environment: prod
  ports:
    - protocol: TCP
      port: 8088        # Service port
      targetPort: 8088  # Target port on the container
