ingress-tutorial/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: app-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: "minikube-example.com"    # give host name
      http:
        paths:
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: v1-proxyservice
                port:
                  number: 8088       # service port no
    - host: "minikube-example.com"    # give host name
      http:
        paths:
          - pathType: Prefix
            path: /v2
            backend:
              service:
                name: v2-proxyservice
                port:
                  number: 8088       # service port no
